# guinix

./: Cargo.toml  README.md  build.rs
src/: main.rs
ui/: guinix.slint
