[package]
name = "guinix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "guinix-login"

[[bin]]
name = "guinix-compositer"

[[bin]]
name = "guinix-launcher"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1

[dependencies]
pam = "0.7.0"
slint = "0.3.4"

[build-dependencies]
slint-build = "0.3.4"